--- a/_includes/donate-buttons.html
+++ b/_includes/donate-buttons.html
@@ -7,10 +7,10 @@
 
 
 <center>
-  <h3>European Bank Deposit</h3>
+  <h3>European Bank Deposit / iDEAL / Credit Card</h3>
   <p>
     Stuxhost<br />
-    <a target="blank" href="https://bunq.me/mstdn">NL53BUNQ2061168213</a><br />
+    <a target="blank" href="https://bunq.me/stuxhost">NL53BUNQ2061168213</a><br />
     BUNQNL2AXXX
   </p>
 </center>
