--- a/_includes/donate-buttons.html
+++ b/_includes/donate-buttons.html
@@ -10,8 +10,8 @@
   <h3>European Bank Deposit / iDEAL / Credit Card</h3>
   <p>
     Stuxhost<br />
-    <a target="blank" href="https://bunq.me/stuxhost">NL53BUNQ2061168213</a><br />
-    BUNQNL2AXXX
+    Number: <a target="blank" href="https://bunq.me/stuxhost">NL53BUNQ2061168213</a><br />
+    BIC: BUNQNL2AXXX
   </p>
 </center>
 
